fix tabs wrapping

--- a/src/extensions/mg-tabs.scss
+++ b/src/extensions/mg-tabs.scss
@@ -3,6 +3,7 @@
 
 .mg-tabs > ul {
   display: flex;
+  text-align: center;
   flex-wrap: nowrap;
   overflow-x: auto;
   list-style: none;
@@ -19,6 +20,7 @@
   border-bottom: 0.3rem solid transparent;
   color: $color-tertiary;
   opacity: 0.7;
+  flex: 0 0 auto;
 }
 
 .mg-tabs > ul > li.active {
